Fixed UX. * Updated color scheme. * Updated font. * Fixed issues on small screen. * Fixed spacing issues on top bar. * Fixed sizing issues for user icon.

--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,8 @@
 body {
+    font-family: 'Titillium Web', sans-serif;
     padding-top:90px;
-    padding-bottom: 100px;
+    padding-bottom: 160px;
+    color: #263238,
 }
 
 .navbar {
@@ -10,8 +12,17 @@ body {
 
 .navbar.top {
     font-size: 2em;
+    font-weight: 900;
 }
 
+.navbar.bottom {
+    font-weight: 200;
+}
+
+.navbar .left {
+    padding-top: 5px;
+}
+    
 .navbar .center {
     text-align: center;
 }
@@ -21,15 +32,21 @@ body {
 }
 
 .navbar .glyphicon {
-    color: rgb(51, 122, 183)
+    color: #01579B;
+    padding-right: 5px;
 }
 
+.navbar .glyphicon:last-child {
+    padding-right: inherit;
+}
+    
 .message-content .author {
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .message-content .message {
     font-size: 1.5em;
+    font-weight: 200;
 }
     
 .chat-message .user-image {
@@ -39,8 +56,7 @@ body {
     border-radius: 10px;
     border-width: 5px;
     border-style: solid;
-    border-color: rgb(51, 122, 183);
-    color: rgb(51, 122, 183);
+    width: 70px;
 }
 
 .chat-message {
@@ -51,6 +67,7 @@ body {
     width: 100%;
     padding: 15px 1em;
     margin: 0;
+    font-weight: 600;
 }
 
 .warning {
@@ -62,6 +79,7 @@ body {
 .input-group-lg>.form-control, .input-group-lg>.input-group-addon, .input-group-lg>.input-group-btn>.btn {
     height: 6em;
     margin: 15px;
+    background: #E1F5FE
 }
 
 .input-group {
@@ -71,5 +89,4 @@ body {
 textarea {
     resize: None;
 }
-
 
